packages/preview/sprintf/0.1.0/.nim_runtime/tests/global/tglobalclosure2.nim
discard """
  errormsg: "cannot assign local to global variable"
  line: 14
"""

type X = object
  p: proc() {.closure.}

proc main() =
  var x = "hi"
  proc p() =
    echo x

  let a {.global.} = X(p: p)
  a.p()

main()
